--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
     width: 100%;
     height: 100vh;
     display: flex;
+    background-color: rgba(0, 0, 0, 0.684);
     justify-content: center;
     align-items: center;
 }
