--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@
 .tab-nav__btn {
     width: 25%;
     padding: 15px 0;
-    background: yellow;
+    background: rgb(190, 83, 196);
     outline: none;
     cursor: pointer;
     font-size: 16px;
@@ -53,7 +53,7 @@
 .tab-body__content {
     width: 100%;
     height: 100%;
-    background: gray;
+    background: rgb(23, 69, 222);
     position: absolute;
     justify-content: center;
     align-items: center;
